--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -2,6 +2,10 @@ html {
   overflow-y: scroll;
 }
 
+.md-header__topic:first-child {
+  font-weight: normal;
+}
+
 .md-typeset h2:first-of-type {
   margin-top: 0;
 }
