--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -3,13 +3,14 @@ html {
 }
 
 .md-header, .md-tabs {
+  -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
   background-color: hsla(0, 0%, 100%, 0.5);
 }
 
 [data-md-color-scheme=slate] .md-header,
 [data-md-color-scheme=slate] .md-tabs {
-  background-color: hsla(0, 0%, 5%, 0.5);
+  background-color: hsla(0, 0%, 6%, 0.5);
 }
 
 #logo_light_mode {
