--- a/docs/overrides/partials/copyright.html
+++ b/docs/overrides/partials/copyright.html
@@ -29,7 +29,7 @@
     Privacy Policy
   </a>
   <a href="#__consent">
-    Change cookie settings
+    Change privacy settings
   </a>
   {% if config.copyright %}
     <div class="md-copyright__highlight">
