add anchor links to headers

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -39,14 +39,12 @@ html {
   margin-top: 0;
 }
 
-.md-typeset h2, h3 {
-  transition: transform 500ms ease-in-out;
-  transform-origin: left;
+.toclink {
+  color: unset !important;
 }
 
-.md-typeset h2:hover, h3:hover {
-  transition: transform 100ms ease-in-out;
-  transform: scale(105%);
+.toclink:hover {
+  color: var(--md-accent-fg-color) !important;
 }
 
 .md-main {
