change headings to sentence case

--- a/docs/overrides/partials/copyright.html
+++ b/docs/overrides/partials/copyright.html
@@ -23,10 +23,10 @@
 <!-- Copyright and theme information -->
 <div class="md-copyright">
   <a href="{{ 'legal_notice' | url }}" style="margin-right: 10px;">
-    Legal Notice
+    Legal notice
   </a>
   <a href="{{ 'privacy_policy' | url }}" style="margin-right: 10px;">
-    Privacy Policy
+    Privacy policy
   </a>
   <a href="#__consent">
     Change privacy settings
