--- a/docs/stylesheets/color.css
+++ b/docs/stylesheets/color.css
@@ -1,5 +1,6 @@
 [data-md-color-scheme=default] {
   --md-code-fg-color: hsla(0, 0%, 26%, 1);
+  --md-code-hl-color: #1982C4;
   --md-code-hl-number-color: #FF595E;
   --md-code-hl-special-color: #FF595E;
   --md-code-hl-function-color: #6A4C93;
@@ -62,6 +63,7 @@
   --md-default-bg-color--lightest: hsla(0, 0%, 6%, 0.07);
   --md-code-fg-color: hsla(0, 0%, 86%, 0.82);
   --md-code-bg-color: hsla(0, 0%, 12%, 1);
+  --md-code-hl-color: #2F7CAC;
   --md-code-hl-number-color: #EE686C;
   --md-code-hl-special-color: #EE686C;
   --md-code-hl-function-color: #6E637E;
