edit footer headings

--- a/docs/overrides/partials/copyright.html
+++ b/docs/overrides/partials/copyright.html
@@ -23,13 +23,13 @@
 <!-- Copyright and theme information -->
 <div class="md-copyright">
   <a href="{{ 'legal_notice' | url }}" style="margin-right: 10px;">
-    Legal notice
+    Legal Notice
   </a>
   <a href="{{ 'privacy_policy' | url }}" style="margin-right: 10px;">
-    Privacy policy
+    Privacy Policy
   </a>
   <a href="#__consent">
-    Change privacy settings
+    Change Privacy Settings
   </a>
   {% if config.copyright %}
     <div class="md-copyright__highlight">
