--- a/docs/stylesheets/color.css
+++ b/docs/stylesheets/color.css
@@ -1,122 +1,131 @@
 [data-md-color-scheme=default] {
-  --md-code-fg-color: hsla(0, 0%, 26%, 1);
-  --md-code-hl-color: #1982C4;
-  --md-code-hl-number-color: #FF595E;
-  --md-code-hl-special-color: #FF595E;
-  --md-code-hl-function-color: #6A4C93;
+  --md-default-fg-color: oklch(14.5% 0 0);
+  --md-default-fg-color--light: oklch(14.5% 0 0 / 50%);
+  --md-default-fg-color--lighter: oklch(14.5% 0 0 / 30%);
+  --md-default-fg-color--lightest: oklch(14.5% 0 0 / 10%);
+  --md-default-bg-color: oklch(100% 0 0);
+  --md-default-bg-color--light: oklch(100% 0 0 / 50%);
+  --md-default-bg-color--lighter: oklch(100% 0 0 / 30%);
+  --md-default-bg-color--lightest: oklch(100% 0 0 / 10%);
+  --md-code-fg-color: oklch(26.9% 0 0);
+  --md-code-bg-color: oklch(97% 0 0);
+  --md-code-hl-color: oklch(54.6% 0.245 262.881);
+  --md-code-hl-number-color: oklch(57.7% 0.245 27.325);
+  --md-code-hl-special-color: oklch(57.7% 0.245 27.325);
+  --md-code-hl-function-color: oklch(66.6% 0.179 58.318);
   --md-code-hl-constant-color: var(--md-code-fg-color);
-  --md-code-hl-keyword-color: #1982C4;
-  --md-code-hl-string-color: #71B127;
-  --md-footer-bg-color: hsla(0, 0%, 6%, 1);
+  --md-code-hl-keyword-color: oklch(54.6% 0.245 262.881);
+  --md-code-hl-string-color: oklch(64.8% 0.2 131.684);
+  --md-typeset-table-color: oklch(92.2% 0 0);
+  --md-typeset-table-color--light: oklch(97% 0 0);
+  --md-footer-bg-color: oklch(14.5% 0 0);
+  --md-footer-bg-color--dark: oklch(14.5% 0 0);
 }
 
 [data-md-color-scheme=default] {
-  --md-accent-fg-color: #0367A6;
-  --md-accent-fg-color--transparent: #0367A61A;
+  --md-accent-fg-color: oklch(62.3% 0.214 259.815);
+  --md-accent-fg-color--transparent: oklch(62.3% 0.214 259.815 / 20%);
 }
 
 [data-md-color-primary=white] {
-  --md-primary-fg-color: hsla(0, 0%, 100%, 1);
-  --md-primary-fg-color--light: hsla(0, 0%, 100%, 0.7);
-  --md-primary-fg-color--dark: hsla(0, 0%, 0%, 0.07);
-  --md-primary-bg-color: hsla(0, 0%, 0%, 0.87);
-  --md-primary-bg-color--light: hsla(0, 0%, 0%, 0.54);
-  --md-typeset-a-color: #1982C4;
+  --md-primary-fg-color: oklch(100% 0 0);
+  --md-primary-fg-color--light: oklch(100% 0 0 / 70%);
+  --md-primary-fg-color--dark: oklch(100% 0 0 / 10%);
+  --md-primary-bg-color: oklch(14.5% 0 0);
+  --md-primary-bg-color--light: oklch(14.5% 0 0 / 50%);
+  --md-typeset-a-color: oklch(54.6% 0.245 262.881);
 }
 
 [data-md-color-scheme=default] {
-  --doc-symbol-attribute-fg-color: #FF595E;
-  --doc-symbol-function-fg-color: #71B127;
-  --doc-symbol-method-fg-color: #71B127;
-  --doc-symbol-class-fg-color: #1982C4;
-  --doc-symbol-module-fg-color: #1982C4;
-  --doc-symbol-attribute-bg-color: #FF595E1A;
-  --doc-symbol-function-bg-color: #71B1271A;
-  --doc-symbol-method-bg-color: #71B1271A;
-  --doc-symbol-class-bg-color: #1982C41A;
-  --doc-symbol-module-bg-color: #1982C41A;
+  --doc-symbol-attribute-fg-color: oklch(57.7% 0.245 27.325);
+  --doc-symbol-function-fg-color: oklch(64.8% 0.2 131.684);
+  --doc-symbol-method-fg-color: oklch(64.8% 0.2 131.684);
+  --doc-symbol-class-fg-color: oklch(54.6% 0.245 262.881);
+  --doc-symbol-module-fg-color: oklch(54.6% 0.245 262.881);
+  --doc-symbol-attribute-bg-color: oklch(57.7% 0.245 27.325 / 20%);
+  --doc-symbol-function-bg-color: oklch(64.8% 0.2 131.684 / 20%);
+  --doc-symbol-method-bg-color: oklch(64.8% 0.2 131.684 / 20%);
+  --doc-symbol-class-bg-color: oklch(54.6% 0.245 262.881 / 20%);
+  --doc-symbol-module-bg-color: oklch(54.6% 0.245 262.881 / 20%);
 }
 
 [data-md-color-scheme=default] {
   .md-typeset .admonition,
   .md-typeset details {
-    border-color: #1982C4;
+    border-color: oklch(54.6% 0.245 262.881);
   }
   .md-typeset .admonition > .admonition-title,
   .md-typeset details > summary {
-    background-color: #1982C41A;
+    background-color: oklch(54.6% 0.245 262.881 / 20%);
   }
   .md-typeset .admonition > .admonition-title::before,
   .md-typeset details > summary::before {
-    background-color: #1982C4;
+    background-color: oklch(54.6% 0.245 262.881);
   }
 }
 
 [data-md-color-scheme=slate] {
-  --md-default-fg-color: hsla(0, 0%, 90%, 0.82);
-  --md-default-fg-color--light: hsla(0, 0%, 90%, 0.56);
-  --md-default-fg-color--lighter: hsla(0, 0%, 90%, 0.32);
-  --md-default-fg-color--lightest: hsla(0, 0%, 90%, 0.12);
-  --md-default-bg-color: hsla(0, 0%, 6%, 1);
-  --md-default-bg-color--light: hsla(0, 0%, 6%, 0.54);
-  --md-default-bg-color--lighter: hsla(0, 0%, 6%, 0.26);
-  --md-default-bg-color--lightest: hsla(0, 0%, 6%, 0.07);
-  --md-code-fg-color: hsla(0, 0%, 86%, 0.82);
-  --md-code-bg-color: hsla(0, 0%, 12%, 1);
-  --md-code-hl-color: #2F7CAC;
-  --md-code-hl-number-color: #EE686C;
-  --md-code-hl-special-color: #EE686C;
-  --md-code-hl-function-color: #6E637E;
+  --md-default-fg-color: oklch(98.5% 0 0);
+  --md-default-fg-color--light: oklch(98.5% 0 0 / 50%);
+  --md-default-fg-color--lighter: oklch(98.5% 0 0 / 30%);
+  --md-default-fg-color--lightest: oklch(98.5% 0 0 / 10%);
+  --md-default-bg-color: oklch(14.5% 0 0);
+  --md-default-bg-color--light: oklch(14.5% 0 0 / 50%);
+  --md-default-bg-color--lighter: oklch(14.5% 0 0 / 30%);
+  --md-default-bg-color--lightest: oklch(14.5% 0 0 / 10%);
+  --md-code-fg-color: oklch(92.2% 0 0);
+  --md-code-bg-color: oklch(20.5% 0 0);
+  --md-code-hl-color: oklch(70.7% 0.165 254.624);
+  --md-code-hl-number-color: oklch(70.4% 0.191 22.216);
+  --md-code-hl-special-color: oklch(70.4% 0.191 22.216);
+  --md-code-hl-function-color: oklch(82.8% 0.189 84.429);
   --md-code-hl-constant-color: var(--md-code-fg-color);
-  --md-code-hl-keyword-color: #2F7CAC;
-  --md-code-hl-string-color: #6E9A3C;
-  --md-typeset-kbd-color: hsla(0, 0%, 90%, 0.12);
-  --md-typeset-kbd-accent-color: hsla(0, 0%, 90%, 0.2);
-  --md-typeset-kbd-border-color: hsla(0, 0%, 14%, 1);
-  --md-typeset-table-color: hsla(0, 0%, 95%, 0.12);
-  --md-typeset-table-color--light: hsla(0, 0%, 95%, 0.035);
-  --md-footer-bg-color: hsla(0, 0%, 6%, 1);
-  --md-footer-bg-color--dark: hsla(0, 0%, 6%, 1);
+  --md-code-hl-keyword-color: oklch(70.7% 0.165 254.624);
+  --md-code-hl-string-color: oklch(84.1% 0.238 128.85);
+  --md-typeset-table-color: oklch(26.9% 0 0);
+  --md-typeset-table-color--light: oklch(20.5% 0 0);
+  --md-footer-bg-color: oklch(14.5% 0 0);
+  --md-footer-bg-color--dark: oklch(14.5% 0 0);
 }
 
 [data-md-color-scheme=slate] {
-  --md-accent-fg-color: #136395;
-  --md-accent-fg-color--transparent: #1363951A;
+  --md-accent-fg-color: oklch(62.3% 0.214 259.815);
+  --md-accent-fg-color--transparent: oklch(62.3% 0.214 259.815 / 20%);
 }
 
 [data-md-color-scheme=slate][data-md-color-primary=black] {
-  --md-primary-fg-color: hsla(0, 0%, 9%, 1);
-  --md-primary-fg-color--light: hsla(0, 0%, 9%, 0.54);
-  --md-primary-fg-color--dark: hsla(0, 0%, 9%, 1);
-  --md-primary-bg-color: hsla(0, 0%, 100%, 1);
-  --md-primary-bg-color--light: hsla(0, 0%, 100%, 0.7);
-  --md-typeset-a-color: #2F7CAC;
+  --md-primary-fg-color: oklch(14.5% 0 0);
+  --md-primary-fg-color--light: oklch(14.5% 0 0 / 50%);
+  --md-primary-fg-color--dark: oklch(14.5% 0 0);
+  --md-primary-bg-color: oklch(98.5% 0 0);
+  --md-primary-bg-color--light: oklch(98.5% 0 0 / 70%);
+  --md-typeset-a-color: oklch(70.7% 0.165 254.624);
 }
 
 [data-md-color-scheme=slate] {
-  --doc-symbol-attribute-fg-color: #EE686C;
-  --doc-symbol-function-fg-color: #6E9A3C;
-  --doc-symbol-method-fg-color: #6E9A3C;
-  --doc-symbol-class-fg-color: #2F7CAC;
-  --doc-symbol-module-fg-color: #2F7CAC;
-  --doc-symbol-attribute-bg-color: #EE686C1A;
-  --doc-symbol-function-bg-color: #6E9A3C1A;
-  --doc-symbol-method-bg-color: #6E9A3C1A;
-  --doc-symbol-class-bg-color: #2F7CAC1A;
-  --doc-symbol-module-bg-color: #2F7CAC1A;
+  --doc-symbol-attribute-fg-color: oklch(70.4% 0.191 22.216);
+  --doc-symbol-function-fg-color: oklch(84.1% 0.238 128.85);
+  --doc-symbol-method-fg-color: oklch(84.1% 0.238 128.85);
+  --doc-symbol-class-fg-color: oklch(70.7% 0.165 254.624);
+  --doc-symbol-module-fg-color: oklch(70.7% 0.165 254.624);
+  --doc-symbol-attribute-bg-color: oklch(70.4% 0.191 22.216 / 20%);
+  --doc-symbol-function-bg-color: oklch(84.1% 0.238 128.85 / 20%);
+  --doc-symbol-method-bg-color: oklch(84.1% 0.238 128.85 / 20%);
+  --doc-symbol-class-bg-color: oklch(70.7% 0.165 254.624 / 20%);
+  --doc-symbol-module-bg-color: oklch(70.7% 0.165 254.624 / 20%);
 }
 
 [data-md-color-scheme=slate] {
   .md-typeset .admonition,
   .md-typeset details {
-    border-color: #2F7CAC;
+    border-color: oklch(70.7% 0.165 254.624);
   }
   .md-typeset .admonition > .admonition-title,
   .md-typeset details > summary {
-    background-color: #2F7CAC1A;
+    background-color: oklch(70.7% 0.165 254.624 / 20%);
   }
   .md-typeset .admonition > .admonition-title::before,
   .md-typeset details > summary::before {
-    background-color: #2F7CAC;
+    background-color: oklch(70.7% 0.165 254.624);
   }
 }
